public/assets/css/style.css
body {
  overflow-x: hidden;
}
/*
* ----------------------------------------------------------------------------------------
Author       : Tanvir Hossain
Template Name: Nino - Premium Portfolio Template
Version      : 1.0                                          
* ----------------------------------------------------------------------------------------
*/

/*
* ----------------------------------------------------------------------------------------
* 01.GLOBAL CSS STYLE
* 02.COMMON CSS STYLE
* 03.MENU CSS STYLE
* 04.HEADER CSS STYLE
* 05.ABOUT CSS STYLE
* 06.SERVICE CSS STYLE
* 07.SKILL CSS STYLE
* 08.RESUME CSS STYLE
* 09.PORTFOLIO CSS STYLE
* 10.TESTIMONIALS CSS STYLE
* 11.PRICING CSS STYLE
* 12.CLIENTS CSS STYLE
* 13.CONTACT CSS STYLE
* 14.FOOTER CSS STYLE
* 15.PRELOADER & BOUNCE CCS STYLE
* 16.BLOG CSS STYLE
* ----------------------------------------------------------------------------------------
*/


/*
* ----------------------------------------------------------------------------------------
* 01.GLOBAL STYLE
* ----------------------------------------------------------------------------------------
*/

@import url("https://fonts.googleapis.com");
@import url("https://fonts.gstatic.com");
@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');

:root {
    --main-color: #070707;
    --heading-color: #fff;
    --primary-color: #F4F3ED;
    --lighter-color: #f7f7f7;
    --subtitle-color: #f7f7f7;
    --black-color: #070707;
    --border-color: rgba(255, 255, 255, 0.0784313725);
    --button-border: rgba(119, 119, 125, .2);
    --body-background: #000;
    --body-color: rgb(119, 119, 125); 
    --grey-bg: #E6EAEE;
    --text-font: "Poppins", sans-serif;
    --title-font: "Oswald", sans-serif;
}


* {
    margin: 0;
    padding: 0;
    border: none;
    outline: none;
    box-shadow: none;
}

body {
    color: #E6EAEE;
    background: var(--body-background);
    font-weight: 400;
    line-height: 30px;
    font-size: 16px;
    font-family: "Poppins", sans-serif;
    overflow-x: hidden;

}


h1,
.h1,
h2,
.h2,
h3,
.h3,
h4,
.h4,
h5,
.h5,
h6,
.h6,
.accordion-item .accordion-button {
    color: var(--heading-color);
    font-family: "Oswald", sans-serif;
}

h1,
.h1 {
    font-size: 58px;
}

h2,
.h2 {
    font-size: 22px;
}

h3,
.h3 {
    line-height: 1.3;
    font-size: 30px;
}

h4,
.h4 {
    line-height: 1.1;
    font-size: 24px;
}

h5,
.h5 {
    line-height: 1.4;
    font-size: 20px;
}

h6,
.h6 {
    font-size: 16px;
}


p {
    line-height: 28px;
}

ul,
li {
    margin: 0;
    padding: 0;
}

fieldset {
    border: 0 none;
    margin: 0 auto;
    padding: 0;
}

.no-padding {
    padding: 0 !important;
}

a {
    color: var(--main-color);
    cursor: pointer;
    outline: none;
    -webkit-transition: 0.5s;
    transition: 0.5s;
    text-decoration: none;
    font-family: "Poppins", sans-serif;

}

a:hover,
a:focus,
a:visited {
    text-decoration: none;
    outline: none;

}
a:hover{
    color: #000;

}


ul,
li {
    list-style: none;
    padding: 0;
    margin: 0;
}

img {
    max-width: 100%;
    display: inline-block;
}

mark {
    color: var(--primary-color);
    background: transparent;
    text-decoration: underline;
}



input,
select,
textarea,
.nice-select,
.form-control {
    width: 100%;
    height: auto;
    border: none;
    font-size: 20px;
    border-radius: 0;
    padding: 20px 0;
    background-color: #fff;
    border-bottom: 2px solid rgba(41, 41, 41, 0.1);
}

input::-webkit-input-placeholder,
select::-webkit-input-placeholder,
textarea::-webkit-input-placeholder,
.nice-select::-webkit-input-placeholder,
.form-control::-webkit-input-placeholder {
    color: var(--main-color);
    opacity: .4;
    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=40)";
}

input:-ms-input-placeholder,
select:-ms-input-placeholder,
textarea:-ms-input-placeholder,
.nice-select:-ms-input-placeholder,
.form-control:-ms-input-placeholder {
    color: var(--main-color);
    opacity: .4;
    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=40)";
}

input::-ms-input-placeholder,
select::-ms-input-placeholder,
textarea::-ms-input-placeholder,
.nice-select::-ms-input-placeholder,
.form-control::-ms-input-placeholder {
    color: var(--main-color);
    opacity: .4;
    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=40)";
}

input::-webkit-input-placeholder,
select::-webkit-input-placeholder,
textarea::-webkit-input-placeholder,
.nice-select::-webkit-input-placeholder,
.form-control::-webkit-input-placeholder {
    color: var(--main-color);
    opacity: .4;
    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=40)";
}

input::-moz-placeholder,
select::-moz-placeholder,
textarea::-moz-placeholder,
.nice-select::-moz-placeholder,
.form-control::-moz-placeholder {
    color: var(--main-color);
    opacity: .4;
    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=40)";
}

input:-ms-input-placeholder,
select:-ms-input-placeholder,
textarea:-ms-input-placeholder,
.nice-select:-ms-input-placeholder,
.form-control:-ms-input-placeholder {
    color: var(--main-color);
    opacity: .4;
    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=40)";
}

input::placeholder,
select::placeholder,
textarea::placeholder,
.nice-select::placeholder,
.form-control::placeholder {
    color: var(--main-color);
    opacity: .4;
    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=40)";
}

input:focus,
select:focus,
textarea:focus,
.nice-select:focus,
.form-control:focus {
    border-bottom: 2px solid rgba(41, 41, 41, 0.1);
}

.nice-select {
    font-size: 20px;
    line-height: 1.3;
}

.nice-select:after {
    width: 8px;
    height: 8px;
    right: 8px;
    border-color: var(--heading-color);
}

.nice-select .current {
    font-weight: 500;
    color: var(--heading-color);
}
/* ... */

